fixed the footer spacing in the sidebar

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -226,8 +226,6 @@
   }
 }
 
-
-
 .sidebar-categories {
   padding-bottom: 15px;
 
@@ -290,7 +288,7 @@
   }
 
   .sidebar-footer-push {
-    height: 500px;
+    height: 350px;
   }
 
   .category-container {
